# RadarSim

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/core/: ObjectManager.h  SimulationClock.h  Vector2D.h
include/domain/: Aircraft.h  FlyingObject.h  Helicopter.h  UAV.h
include/ui/: RadarWidget.h
src/: main.cpp
src/core/: ObjectManager.cpp  SimulationClock.cpp  Vector2D.cpp
src/domain/: Aircraft.cpp  FlyingObject.cpp  Helicopter.cpp  UAV.cpp
src/ui/: RadarWidget.cpp
tests/: test_vector2d.cpp
